--- a/Solutions/Task1/853503_Валентин_Самсонов/readme.mb
+++ b/Solutions/Task1/853503_Валентин_Самсонов/readme.mb
@@ -1,1 +1,9 @@
+Версия Python 3.8
 
+Сделан в PyCharm
+
+Запуск через терминал lab1.py -w text - запуск wordcount
+                      lab1.py -q numbers - запуск быстрой сортировки
+                      lab1.py -m text - заруск сортировки слияниями 
+                      lab1.py -f fib - запуск генератора чисел фибоначи
+Говорили, чтоб побольше аргументов сделалл.
